Tests/SyntaxErrors/TryCatchWithoutErrorName.blz
try
    1 / 0
catch
    print("Anything")
end
print("FAIL!")